--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,22 +33,22 @@
                     <nav class="header__menu_links_wrap">
                         <ul class="header__menu_list">
                             <li class="header__menu_item">
-                                <a href="./index.html" class="header__menu_link">
+                                <a href="./index.html" title="Главная" class="header__menu_link">
                                     Главная
                                 </a>
                             </li>
                             <li class="header__menu_item">
-                                <a href="./shop.html" class="header__menu_link">
+                                <a href="./shop.html" title="Магазин" class="header__menu_link">
                                     Магазин
                                 </a>
                             </li>
                             <li class="header__menu_item">
-                                <a href="./about.html" class="header__menu_link">
+                                <a href="./about.html" title="О бренде" class="header__menu_link header__menu_link-w-700">
                                     О бренде
                                 </a>
                             </li>
                             <li class="header__menu_item">
-                                <a href="./contacts.html" class="header__menu_link">
+                                <a href="./contacts.html" title="Контакты" class="header__menu_link">
                                     Контакты
                                 </a>
                             </li>
@@ -56,7 +56,9 @@
                     </nav>
                     <div class="header__menu_contacts-wrap">
                         <div class="header__menu_contact_wrapper">
-                            <img src="./img/tel-icon.svg" alt="tel" class="header__menu_contact_icon-tel">
+                            <button type="button" class="header__menu_contact_btn" id="btnOpenModal">
+                                <div class="header__menu_contact_icon-tel"></div>
+                            </button>
                             <a href="tel:+74958235412" class="header__menu_contact_link">
                                 +7 (495) 823-54-12
                             </a>
@@ -67,9 +69,202 @@
                             </a>
                         </div>
                     </div>
+
+                    <!-- Modal -->
+                    <div class="header__modal-window_wrapper" id="modalWindow">
+                        <div class="header__overlay-modal" id="header__overlay-modal"></div>
+                        <div class="header__modal-window_form_wrapper">
+                            <button class="header__modal-window_form_btn-close" id="btnCloseModal">
+                                <img src="./img/Close.svg" alt="" class="header__modal-window_form_icon-close">
+                            </button>
+                            <h4 class="header__modal-window_form_title">
+                                Заказать обратный звонок
+                            </h4>
+                            <form action="" class="header__modal-window_form" id="header__modal-window_form">
+                                <input type="text" class="header__modal-window_form_input" name="name"  placeholder="Имя" required>
+
+                                <input type="email" class="header__modal-window_form_input" name="email"  placeholder="E-mail" required>
+
+                                <input type="tel" class="header__modal-window_form_input" name="phone"  placeholder="Телефон" required>
+
+                                <button type="submit" class="header__modal-window_form-btn btnBac" id="btnFormRequestCall"  data-submit="">
+                                    Заказать звонок
+                                </button>
+                            </form>
+                        </div>
+                        <div class="header__modal-window-set" id="modalWindowSet">
+                            <h4 class="header__modal-window-set_title">
+                                Отлично! Мы скоро вам перезвоним.
+                            </h4>
+                            <button type="reset" class="btnTransparent header__modal-window-set-close close" id="btnCloseModalSet">
+                                Закрыть
+                            </button>
+                        </div>
+                    </div>
+                    <!-- Modal end -->
+                </div>
+                <div class="header__title-link_wrapper">
+                    <div class="header__title_wrapper">
+                        <h2 class="header__title">
+                            О бренде
+                        </h2>
+                    </div>
+                    <div class="header__link_wrapper">
+                        <a href="./index.html" class="header__link">
+                            Главная
+                        </a>
+                        <span class="border-hyphen">
+                        </span>
+                        <a href="" class="header__link disabled">
+                            О бренде
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <section class="aboutProducts" id="aboutProducts">
+        <div class="container">
+            <div class="aboutProducts__flex_wrapper">
+                <div class="aboutProducts__card_wrapper">
+                    <div class="aboutProducts__cardOne_img_wrapper">
+                        <img src="./img/photo-about-women-red.png" alt="" class="aboutProducts__cardOne_img">
+                    </div>
+                    <div class="aboutProducts__cardOne_offer_wrapper">
+                        <h5 class="aboutProducts__cardOne_offer_title">
+                            Идея и женщина
+                        </h5>
+                        <p class="aboutProducts__cardOne_offer_text">
+                            Womazing была основана в 2010-ом и стала одной из самых успешных компаний нашей страны. Как и многие итальянские фирмы, Womazing остаётся семейной компанией, хотя ни один из членов семьи не является модельером.
+                            <br><br>
+                            Мы действуем по успешной формуле, прибегая к услугам известных модельеров для создания своих коллекций. Этот метод был описан критиком моды Колином Макдауэллом как форма дизайнерского со-творчества, характерная для ряда итальянских prêt-a-porter компаний. 
+                        </p>
+                    </div>
+                </div>
+                <div class="aboutProducts__card_wrapper">
+                    <div class="aboutProducts__cardOne_offer_wrapper">
+                        <h5 class="aboutProducts__cardOne_offer_title">
+                            Магия в деталях
+                        </h5>
+                        <p class="aboutProducts__cardOne_offer_text">
+                            Первый магазин Womazing был открыт в маленьком городке на севере страны в 2010-ом году. Первая коллекция состояла из двух пальто и костюма, которые были копиями парижских моделей.
+                            <br><br>
+                            Несмотря на то, что по образованию основательница была адвокатом, ее семья всегда была тесно связана с шитьём (прабабушка основательницы шила одежду для женщин, а мать основала профессиональную школу кроя и шитья). Стремление производить одежду для масс несло в себе большие перспективы, особенно в то время, когда высокая мода по-прежнему доминировала, а рынка качественного prêt-a-porter попросту не существовало. 
+                        </p>
+                    </div>
+                    <div class="aboutProducts__cardOne_img_wrapper">
+                        <img src="./img/photo-about-women-white.png" alt="" class="aboutProducts__cardOne_img">
+                    </div>
+                </div>
+                <div class="aboutProducts__btn-link_wrapper">
+                    <a href="./shop.html" class="aboutProducts__btn-link btnBac">
+                        Перейти в магазин
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer" id="footer">
+        <div class="container">
+            <div class="footer-flex__wrapper">
+                <div class="footer__logo_wrapper">
+                    <div class="footer__logo-icon_wrapper">
+                        <img src="./img/logo.svg" alt="" class="footer__logo-icon">
+                    </div>
+                    <div class="footer__logo-offer_wrapper">
+                        <span class="footer__logo_text">
+                            © Все права защищены
+                        </span>
+                        <a href="#" class="footer__logo_link">
+                            Политика конфиденциальности
+                        </a>
+                        <a href="#" class="footer__logo_link">
+                            Публичная оферта
+                        </a>
+                    </div>
+                </div>
+                <div class="footer__menu_wrapper">
+                    <nav class="header__menu_links_wrap">
+                        <ul class="header__menu_list">
+                            <li class="header__menu_item">
+                                <a href="./index.html" title="Главная" class="header__menu_link header__menu_link-w-700">
+                                    Главная
+                                </a>
+                            </li>
+                            <li class="header__menu_item">
+                                <a href="./shop.html" title="Магазин" class="header__menu_link">
+                                    Магазин
+                                </a>
+                                <div class="footer-menu__link-shop_wrapper">
+                                    <ul class="footer-menu__link-shop_list">
+                                        <li class="footer-menu__link-shop_item">
+                                            <a href="#" class="footer-menu__link-shop_link">
+                                                Пальто
+                                            </a>
+                                        </li>
+                                        <li class="footer-menu__link-shop_item">
+                                            <a href="#" class="footer-menu__link-shop_link">
+                                                Свитшоты
+                                            </a>
+                                        </li>
+                                        <li class="footer-menu__link-shop_item">
+                                            <a href="#" class="footer-menu__link-shop_link">
+                                                Кардиганы
+                                            </a>
+                                        </li>
+                                        <li class="footer-menu__link-shop_item">
+                                            <a href="#" class="footer-menu__link-shop_link">
+                                                Толстовки
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li class="header__menu_item">
+                                <a href="./about.html" title="О бренде" class="header__menu_link">
+                                    О бренде
+                                </a>
+                            </li>
+                            <li class="header__menu_item">
+                                <a href="./contacts.html" title="Контакты" class="header__menu_link">
+                                    Контакты
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="footer__contact_wrapper">
+                    <div class="footer__contacts_wrapper">
+                        <a href="tel:+74958235412" class="footer__contact_tel">
+                            +7 (495) 823-54-12
+                        </a>
+                        <a href="mailto:hello@womazing.com" class="footer__contact_email">
+                            hello@womazing.com
+                        </a>
+                    </div>
+                    <div class="footer__contact-social_wrapper">
+                        <a href="https://www.instagram.com/" class="footer__massange-btn" rel="nofollow noopener noreferrer" target="_blank">
+                            <img src="./img/instagram.svg" alt="" class="footer__contact-social_img">
+                        </a>
+                        <a href="https://www.facebook.com" class="footer__massange-btn" rel="nofollow noopener noreferrer" target="_blank">
+                            <img src="./img/facebook.svg" alt="" class="footer__contact-social_img">
+                        </a>
+                        <a href="https://twitter.com" class="footer__massange-btn" rel="nofollow noopener noreferrer" target="_blank">
+                            <img src="./img/twitter.svg" alt="" class="footer__contact-social_img">
+                        </a>
+                    </div>
+                    <div class="footer__contact_visa_wrapper">
+                        <img src="./img/visa-mastercard.svg" alt="" class="footer__contact_visa">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="./js/jquery-3.6.4.min.js"></script>
+    <script src="./js/jquery.validate.min.js"></script>
+    <script src="./js/modal-script.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
